# Azas

./: .env.local  .gitattributes  .gitignore  AGENTS.md  COMMANDS.md  DESIGN.md  README.md  asdfas  cup_classifier_best.pth  package.xml  setup.py
.github/workflows/: ci.yml
cocktail_robot_system/: detection_3d_node.py  doosan_adapter.py  lid_close_state_machine.py  robot_move_test.py  vision_node.py
config/: params.yaml
dependencies/: README.md  python_optional_requirements.txt
docs/: cocktail_spec.html  collaboration_edit_map.md  control_readiness_audit.md  cup_height_orientation_calibration.md  developer_orientation.md  field_control_runbook.md  field_execution_commands.md  lid_gripper_pipeline.md  lid_screw_on_holder_sequence.md  m0609_cocktail_robot_system_runbook_kor.md  offline_color_discrimination.md  oss_robot_control_stack.md  post_shake_human_handover_plan.md  real_robot_coordinate_teaching_guide.html  real_robot_dispenser_test_commands.md  real_robot_full_command_runbook.md  recovery_after_poweroff.md  robot_pipeline_control.html  tumbler_dispenser_models.md  yolo_cup_uprighting_merge.md
docs/description/: rg2_modeling.md
docs/onboarding/: 01-quickstart-kor.md  02-role-map-kor.md
docs/reference/: package-boundaries.md
launch/: lid_pick_place_real.launch.py
local_models/: README.md
omx_wiki/: azas-real-robot-handoff-2026-05-18-dispenser-shake-panel.md  calibration-fill-required-report-2026-05-20.md  index.md  log.md  measured-geometry-inventory-2026-05-20.md  moveit-rviz-dispenser-simulation-procedure.md  real-robot-motion-bringup.md  robot-operation-rules.md  session-log-2026-05-19-0-4as20g.md  session-log-2026-05-28-3-adlm15.md  session-log-2026-06-05-8-3rrp4t.md  session-log-2026-06-07-9-5l0d8p.md  session-log-2026-06-10-7-prx6mu.md  session-log-2026-06-11-5-rp8btb.md  session-log-2026-06-11-6-dnt3rj.md
src/azas_bringup/: package.xml  setup.py
src/azas_calibration/: package.xml
src/azas_cup_uprighting/: package.xml  setup.cfg  setup.py
src/azas_cup_uprighting/azas_cup_uprighting/: _base_node.py  _config.py  _motion.py  _perception.py  yolo_cup_uprighting_node.py
src/azas_cup_uprighting/config/: measured_dispenser_collision.yaml  moveit_py.yaml  safety.yaml
src/azas_cup_uprighting/launch/: yolo_cup_uprighting.launch.py
src/azas_description/: CMakeLists.txt  package.xml
src/azas_description/launch/: view_m0609_rg2_parametric.launch.py
src/azas_description/meshes/rg2/collision/: README.md
src/azas_description/meshes/rg2/visual/: README.md
src/azas_description/urdf/: m0609_rg2_parametric.urdf.xacro  onrobot_rg2ft_mesh_macro.xacro  rg2_parametric.xacro
src/azas_dispenser/: README.md  package.xml  setup.cfg  setup.py
src/azas_dispenser/azas_dispenser/: dispenser_press_moveit_node.py  dispenser_press_node.py  find_press_ready_pose_node.py
src/azas_dispenser/launch/: dispenser_press.launch.py  dispenser_press_moveit.launch.py  find_press_ready_pose.launch.py  spawn_dispenser.launch.py
src/azas_dispenser/models/dispenser/: model.config  model.sdf
src/azas_gripper/: package.xml  setup.py
src/azas_kiosk/: package.xml  setup.cfg  setup.py
src/azas_kiosk/azas_kiosk/: kiosk_node.py  menu_catalog.py
src/azas_kiosk/launch/: azas_kiosk.launch.py
src/azas_kiosk/test/: test_menu_catalog.py
src/azas_kiosk/web/: app.js  index.html  styles.css
src/azas_motion/: package.xml  setup.py
src/azas_perception/: package.xml  setup.py
src/azas_task_manager/: package.xml  setup.py
src/azas_voice/: package.xml  setup.py
src/cocktail_robot_system/: setup.cfg  setup.py
src/dsr_practice/: package.xml  pytest.ini
src/yolo_pick_demo/: COLCON_IGNORE  package.xml  setup.py
tools/: README.md  export_grasp_frame.py  run_supervised_real_single_cup_pick.py  smoke_pick_and_align_no_motion.sh  sweep_side_grasp_planning_candidates.py
tools/checks/: README.md  check_cocktail_workflow_plan.py  check_connection_stage.sh  check_dispenser_color_scan.py  check_dispenser_joint1_clearance.py  check_dispenser_recipe_sequence.py  check_dispenser_regrasp_panel.py  check_guarded_cup_pick_backoff.py  check_hand_detection_perception_only.py  check_oss_stack.sh  (+16 more)
(+299 files in other folders)
