<?xml version="1.0"?>
<package format="3">
  <name>azas_description</name>
  <version>0.1.0</version>
  <description>Azas robot description overlays, including the parametric OnRobot RG2 gripper model.</description>
  <maintainer email="shining-b-02@example.com">Azas</maintainer>
  <license>Apache-2.0</license>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
