<?xml version="1.0"?>
<package format="3">
  <name>azas_kiosk</name>
  <version>0.0.1</version>
  <description>Local kiosk UI bridge for symbolic Azas cocktail ordering.</description>
  <maintainer email="team@example.com">Azas Team</maintainer>
  <license>MIT</license>

  <depend>ament_index_python</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
